@@ -5,6 +5,14 @@
 
 
 #
+# -------------- 2022-06-22 ----------------------------------------------------
+#
+
+## readout_db stuff
+- make time human readable
+
+
+#
 # -------------- 2021-06-09 ----------------------------------------------------
 #
 
